syntax = "proto3";
option go_package = ".;phone";

package phone;

service Phone {
    rpc Call (stream CallData) returns (stream CallData);
    rpc UpdateSettings (UserSettingsData) returns (UserSettingsResponse);
}

message CallData {
    AudioData audio_data = 1;
    UserMetaData user_meta_data = 2;
}

message AudioData {
    string audio_encoding = 1;
    repeated Sample samples = 2;
    uint32 num_samples = 3;
    Format format = 4;
}

message Sample {
    double left_channel = 1;
    double right_channel = 2;
}

message Format {
    uint32 sample_rate = 1;
    uint32 num_channels = 2;
    uint32 precision = 3;
}

message UserMetaData {
    uint64 id = 1;
    Coordinates coordinates = 2;
}

message Coordinates {
    double x = 1;
    double y = 2;
    double z = 3;
}

message UserSettingsData {
    bool mute = 1;
    map<uint64, bool> mute_list = 2;
}

message UserSettingsResponse {
    bool ok = 1;
}